trial for modal issue; h1 shadow for dark mode

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .message-modal {
 	display: none;
 	min-height: 90vh;
-	min-width: 80vw;
+	min-width: 70vw;
 	z-index: 120;
 	position: absolute;
 	top: 0%;
@@ -213,12 +213,6 @@ button:active {
 	padding: 1vw;
 }
 
-/* .dark-mode {
-	--main-font-color: #fffbbe;
-	--main-bg-color: #a374d5;
-	--answer-bg-color: #a374d5;
-} */
-
 @media (prefers-color-scheme: dark) {
 	body {
 		--main-font-color: #fffbbe;
@@ -229,15 +223,12 @@ button:active {
 
 	h1 {
 		text-shadow: none;
+		text-shadow: 2px 0 hsl(0, 0%, 91%), -2px 2px 0 hsl(0, 0%, 91%),
+			-2px -2px 0 hsl(0, 0%, 91%), 2px -2px 0 hsl(0, 0%, 91%),
+			0px 0px 0 hsl(0, 0%, 51%), 1px 1px 0 hsl(0, 0%, 35%),
+			2px 2px 0 hsl(0, 0%, 39%), 3px 3px 0 hsl(0, 0%, 73%),
+			4px 4px 0 hsl(0, 0%, 28%), 5px 5px 0 hsl(0, 0%, 22%),
+			6px 6px 0 hsl(0, 0%, 56%), 7px 7px 6px hsla(0, 0%, 0%, 0.6),
+			7px 7px 1px hsla(0, 0%, 0%, 0.5), 0px 0px 6px hsla(0, 0%, 0%, 0.2);
 	}
-
-	/* .answer {
-		background-color: var(--main-bg-color);
-		color: #000;
-	}
-
-	.wrapper{
-		color: var(--main-font-color);
-		background-color: var(--main-bg-color);
-	} */
 }
